--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-25 Thu 09:53]
+#+CAPTION: Clock summary at [2019-04-25 Thu 10:04]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *18:26* |       |       | 100.0 |
+| *Total time*                                           | *18:36* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 18:26   |       |       | 100.0 |
-| Active                                                 |         | 18:26 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |  14.5 |
+| Stories                                                | 18:36   |       |       | 100.0 |
+| Active                                                 |         | 18:36 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |  14.3 |
 | Sprint and product backlog grooming                    |         |       |  0:22 |   2.0 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |  10.4 |
-| Read variability papers                                |         |       |  1:04 |   5.8 |
-| Implement variability model                            |         |       | 12:25 |  67.4 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |  10.3 |
+| Read variability papers                                |         |       |  1:04 |   5.7 |
+| Implement variability model                            |         |       | 12:35 |  67.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -189,6 +189,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-25 Thu 09:54]--[2019-04-25 Thu 10:04] =>  0:10
     CLOCK: [2019-04-25 Thu 09:37]--[2019-04-25 Thu 09:53] =>  0:16
     CLOCK: [2019-04-25 Thu 08:57]--[2019-04-25 Thu 09:36] =>  0:39
     CLOCK: [2019-04-25 Thu 07:06]--[2019-04-25 Thu 07:20] =>  0:14
