--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-25 Thu 10:12]
+#+CAPTION: Clock summary at [2019-04-25 Thu 10:54]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *18:43* |       |       | 100.0 |
+| *Total time*                                           | *19:24* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 18:43   |       |       | 100.0 |
-| Active                                                 |         | 18:43 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |  14.2 |
-| Sprint and product backlog grooming                    |         |       |  0:22 |   2.0 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |  10.2 |
-| Read variability papers                                |         |       |  1:04 |   5.7 |
-| Implement variability model                            |         |       | 12:42 |  67.9 |
+| Stories                                                | 19:24   |       |       | 100.0 |
+| Active                                                 |         | 19:24 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |  13.7 |
+| Sprint and product backlog grooming                    |         |       |  0:22 |   1.9 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   9.9 |
+| Read variability papers                                |         |       |  1:04 |   5.5 |
+| Implement variability model                            |         |       | 13:23 |  69.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -189,6 +189,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-25 Thu 10:13]--[2019-04-25 Thu 10:54] =>  0:41
     CLOCK: [2019-04-25 Thu 10:05]--[2019-04-25 Thu 10:12] =>  0:07
     CLOCK: [2019-04-25 Thu 09:54]--[2019-04-25 Thu 10:04] =>  0:10
     CLOCK: [2019-04-25 Thu 09:37]--[2019-04-25 Thu 09:53] =>  0:16
