--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-25 Thu 11:12]
+#+CAPTION: Clock summary at [2019-04-25 Thu 11:19]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *19:40* |       |       | 100.0 |
+| *Total time*                                           | *19:46* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 19:40   |       |       | 100.0 |
-| Active                                                 |         | 19:40 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |  13.6 |
+| Stories                                                | 19:46   |       |       | 100.0 |
+| Active                                                 |         | 19:46 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |  13.5 |
 | Sprint and product backlog grooming                    |         |       |  0:22 |   1.9 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   9.7 |
 | Read variability papers                                |         |       |  1:04 |   5.4 |
-| Implement variability model                            |         |       | 13:39 |  69.4 |
+| Implement variability model                            |         |       | 13:45 |  69.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -189,6 +189,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-25 Thu 11:13]--[2019-04-25 Thu 11:19] =>  0:06
     CLOCK: [2019-04-25 Thu 11:04]--[2019-04-25 Thu 11:12] =>  0:08
     CLOCK: [2019-04-25 Thu 10:55]--[2019-04-25 Thu 11:03] =>  0:08
     CLOCK: [2019-04-25 Thu 10:13]--[2019-04-25 Thu 10:54] =>  0:41
