--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-25 Thu 11:31]
+#+CAPTION: Clock summary at [2019-04-25 Thu 11:55]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *19:57* |       |       | 100.0 |
+| *Total time*                                           | *20:20* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 19:57   |       |       | 100.0 |
-| Active                                                 |         | 19:57 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |  13.4 |
+| Stories                                                | 20:20   |       |       | 100.0 |
+| Active                                                 |         | 20:20 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |  13.1 |
 | Sprint and product backlog grooming                    |         |       |  0:22 |   1.8 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   9.6 |
-| Read variability papers                                |         |       |  1:04 |   5.3 |
-| Implement variability model                            |         |       | 13:56 |  69.8 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   9.4 |
+| Read variability papers                                |         |       |  1:04 |   5.2 |
+| Implement variability model                            |         |       | 14:19 |  70.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -189,6 +189,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-25 Thu 11:32]--[2019-04-25 Thu 11:55] =>  0:23
     CLOCK: [2019-04-25 Thu 11:20]--[2019-04-25 Thu 11:31] =>  0:11
     CLOCK: [2019-04-25 Thu 11:13]--[2019-04-25 Thu 11:19] =>  0:06
     CLOCK: [2019-04-25 Thu 11:04]--[2019-04-25 Thu 11:12] =>  0:08
@@ -246,6 +247,12 @@ Notes:
   model, and execute the profile binding chain transform on it. We
   then read all features from the configuration. This will prove that
   profile binding works.
+- actually we need to do all of the processing for profiles at the
+  orchestration level. This is because we need access to the
+  variability context, but also because it makes sense as we are
+  trying to orchestrate between variability transforms and coding
+  transforms (this keeps the coding model more or less clean from
+  calling transforms in other models).
 - finally we add feature model to generation context, and read
   remaining fields from the configuration.
 - when all is working, we remove all references to annotation in
