--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-25 Thu 14:53]
+#+CAPTION: Clock summary at [2019-04-25 Thu 15:26]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *20:42* |       |       | 100.0 |
+| *Total time*                                           | *21:14* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 20:42   |       |       | 100.0 |
-| Active                                                 |         | 20:42 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |  12.9 |
-| Sprint and product backlog grooming                    |         |       |  0:22 |   1.8 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   9.3 |
-| Read variability papers                                |         |       |  1:04 |   5.2 |
-| Implement variability model                            |         |       | 14:41 |  70.9 |
+| Stories                                                | 21:14   |       |       | 100.0 |
+| Active                                                 |         | 21:14 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |  12.6 |
+| Sprint and product backlog grooming                    |         |       |  0:22 |   1.7 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   9.0 |
+| Read variability papers                                |         |       |  1:04 |   5.0 |
+| Implement variability model                            |         |       | 15:13 |  71.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -189,6 +189,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-25 Thu 14:54]--[2019-04-25 Thu 15:26] =>  0:32
     CLOCK: [2019-04-25 Thu 14:31]--[2019-04-25 Thu 14:53] =>  0:22
     CLOCK: [2019-04-25 Thu 11:32]--[2019-04-25 Thu 11:55] =>  0:23
     CLOCK: [2019-04-25 Thu 11:20]--[2019-04-25 Thu 11:31] =>  0:11
