--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-26 Fri 09:32]
+#+CAPTION: Clock summary at [2019-04-26 Fri 10:04]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *26:31* |       |       | 100.0 |
+| *Total time*                                           | *27:02* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 26:31   |       |       | 100.0 |
-| Active                                                 |         | 26:31 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |  10.1 |
+| Stories                                                | 27:02   |       |       | 100.0 |
+| Active                                                 |         | 27:02 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   9.9 |
 | Sprint and product backlog grooming                    |         |       |  0:42 |   2.6 |
-| Create a video demo for the previous sprint's features |         |       |  1:55 |   7.2 |
-| Read variability papers                                |         |       |  1:04 |   4.0 |
-| Implement variability model                            |         |       | 20:10 |  76.1 |
+| Create a video demo for the previous sprint's features |         |       |  1:55 |   7.1 |
+| Read variability papers                                |         |       |  1:04 |   3.9 |
+| Implement variability model                            |         |       | 20:41 |  76.5 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,6 +190,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-26 Fri 09:33]--[2019-04-26 Fri 10:04] =>  0:31
     CLOCK: [2019-04-26 Fri 09:17]--[2019-04-26 Fri 09:32] =>  0:15
     CLOCK: [2019-04-26 Fri 08:51]--[2019-04-26 Fri 09:16] =>  0:25
     CLOCK: [2019-04-26 Fri 07:22]--[2019-04-26 Fri 07:25] =>  1:17
