--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-26 Fri 10:41]
+#+CAPTION: Clock summary at [2019-04-26 Fri 10:54]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *27:38* |       |       | 100.0 |
+| *Total time*                                           | *27:50* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 27:38   |       |       | 100.0 |
-| Active                                                 |         | 27:38 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   9.7 |
+| Stories                                                | 27:50   |       |       | 100.0 |
+| Active                                                 |         | 27:50 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   9.6 |
 | Sprint and product backlog grooming                    |         |       |  0:42 |   2.5 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   6.9 |
-| Read variability papers                                |         |       |  1:04 |   3.9 |
-| Implement variability model                            |         |       | 21:17 |  77.0 |
+| Read variability papers                                |         |       |  1:04 |   3.8 |
+| Implement variability model                            |         |       | 21:29 |  77.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,6 +190,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-26 Fri 10:42]--[2019-04-26 Fri 10:54] =>  0:12
     CLOCK: [2019-04-26 Fri 10:05]--[2019-04-26 Fri 10:41] =>  0:36
     CLOCK: [2019-04-26 Fri 09:33]--[2019-04-26 Fri 10:04] =>  0:31
     CLOCK: [2019-04-26 Fri 09:17]--[2019-04-26 Fri 09:32] =>  0:15
