--- a/doc/agile/v1/sprint_backlog_16.org
+++ b/doc/agile/v1/sprint_backlog_16.org
@@ -12,19 +12,19 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-04-26 Fri 11:35]
+#+CAPTION: Clock summary at [2019-04-26 Fri 11:49]
 | <75>                                                   |         |       |       |       |
 | Headline                                               | Time    |       |       |     % |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                           | *28:30* |       |       | 100.0 |
+| *Total time*                                           | *28:43* |       |       | 100.0 |
 |--------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                | 28:30   |       |       | 100.0 |
-| Active                                                 |         | 28:30 |       | 100.0 |
-| Edit release notes for previous sprint                 |         |       |  2:40 |   9.4 |
-| Sprint and product backlog grooming                    |         |       |  0:42 |   2.5 |
+| Stories                                                | 28:43   |       |       | 100.0 |
+| Active                                                 |         | 28:43 |       | 100.0 |
+| Edit release notes for previous sprint                 |         |       |  2:40 |   9.3 |
+| Sprint and product backlog grooming                    |         |       |  0:42 |   2.4 |
 | Create a video demo for the previous sprint's features |         |       |  1:55 |   6.7 |
 | Read variability papers                                |         |       |  1:04 |   3.7 |
-| Implement variability model                            |         |       | 22:09 |  77.7 |
+| Implement variability model                            |         |       | 22:22 |  77.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,6 +190,7 @@ sure our approach is aligned with the literature.
 
 *** STARTED Implement variability model                               :story:
     :LOGBOOK:
+    CLOCK: [2019-04-26 Fri 11:36]--[2019-04-26 Fri 11:49] =>  0:13
     CLOCK: [2019-04-26 Fri 10:55]--[2019-04-26 Fri 11:35] =>  0:40
     CLOCK: [2019-04-26 Fri 10:42]--[2019-04-26 Fri 10:54] =>  0:12
     CLOCK: [2019-04-26 Fri 10:05]--[2019-04-26 Fri 10:41] =>  0:36
